.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Reference__c.object
<CustomObject>
    <description>Recruitment
Gathers data on and from referees</description>
    <fields>
        <fullName>xcdhcm__Applicant__c</fullName>
        <label>Application</label>
        <referenceTo>xcdhcm__Applicant__c</referenceTo>
        <relationshipLabel>References</relationshipLabel>
        <relationshipName>References</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Candidate_L__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate</label>
        <referenceTo>xcdhcm__Candidate__c</referenceTo>
        <relationshipLabel>References</relationshipLabel>
        <relationshipName>References</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Company__c</fullName>
        <label>Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Job_title__c</fullName>
        <label>Job title</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Reference_notes__c</fullName>
        <label>Reference notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Relationship__c</fullName>
        <label>Relationship</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Telephone__c</fullName>
        <label>Telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Vacancy_company__c</fullName>
        <formula>xcdhcm__Applicant__r.xcdhcm__Vacancy__r.xcdhcm__Company_L__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vacancy company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Vacancy_job_title__c</fullName>
        <formula>xcdhcm__Applicant__r.xcdhcm__Vacancy__r.xcdhcm__Job_title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vacancy job title</label>
        <type>Text</type>
    </fields>
    <label>Reference</label>
    <nameField>
        <label>Referee</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>References</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>